--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,9 +1,3 @@
----
-import astroLogo from '../assets/astro.svg';
-import background from '../assets/background.svg';
----
-
 <div id="container">
-	<main>
-	</main>
+	<h1 class="text-4xl font-bold text-primary-500">Jenner - Projects</h1>
 </div>
