--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+@theme {
+    --color-primary-50: #ecf3ff;
+    --color-primary-100: #dde9ff;
+    --color-primary-200: #c2d6ff;
+    --color-primary-300: #9cb9ff;
+    --color-primary-400: #7592ff;
+    --color-primary-500: #536aff;
+    --color-primary-600: #3641f5;
+    --color-primary-700: #2a31d8;
+    --color-primary-800: #252cae;
+    --color-primary-900: #262e89;
+    --color-primary-950: #161950;
+}
