--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,15 +1,19 @@
 ---
+import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../src/consts";
+import BaseHead from "../components/heads/BaseHead.astro";
 import "../styles/global.css";
+
+const {title, description, image} = Astro.props;
+
+const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
+const pageDescription = description || SITE_DESCRIPTION;
+const ogImage = image || SITE_IMAGE;
 ---
 
 <!doctype html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
 	</head>
 	<body>
 		<slot />
