feat(home): add cover component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import Cover from '../components/elements/Cover.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
+    <Cover />
 </Layout>
