--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,7 @@ import "../styles/global.css";
 import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../src/consts";
 import BaseHead from "../components/heads/BaseHead.astro";
 import Header from "../components/navigation/Header.astro";
-
+import Footer from "../components/navigation/Footer.astro";
 const {title, description, image} = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
@@ -20,5 +20,6 @@ const ogImage = image || SITE_IMAGE;
 	<body class="bg-neutral-900 text-neutral-300">
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
