--- a/src/components/icons/Icon.astro
+++ b/src/components/icons/Icon.astro
@@ -10,22 +10,35 @@ export interface Props {
 const { 
   size = 24,
   strokeWidth = 0,
-  class: className = "fill-neutral-300",
+  class: className = "",
   ...rest
 } = Astro.props;
+
+const sizeStyle = {
+  "md": "size-6",
+  "sm": "size-4",
+  "xs": "size-3",
+}
+
+const classList = [
+  "fill-neutral-300",
+  sizeStyle[size as keyof typeof sizeStyle],
+  className,
+]
+
 ---
 
 <svg
   xmlns="http://www.w3.org/2000/svg"
-  width={size}
-  height={size}
-  viewBox={`0 0 ${size} ${size}`}
+  width={24}
+  height={24}
+  viewBox={`0 0 24 24`}
   fill="none"
   stroke="currentColor"
   stroke-width={strokeWidth}
   stroke-linecap="round"
   stroke-linejoin="round"
-  class:list={["icon", className]}
+  class:list={classList}
   {...rest}
 >
   <slot />
