--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -2,6 +2,7 @@
 import Image from "astro/components/Image.astro";
 import AnchorLink from "../library/AnchorLink.astro";
 import { ArrowRight } from "../icons";
+import LinkOut from "../icons/icons/LinkOut.astro";
 ---
 
 <section class="flex flex-col items-center justify-center my-36">
@@ -17,6 +18,6 @@ import { ArrowRight } from "../icons";
     <h1 class="text-4xl font-light max-w-2xl text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text">Software Developer passionate about crafting innovative solutions and delightful user experiences</h1>
     <AnchorLink href="/projects" class="mt-10 flex items-center gap-2">
         Latest Projects
-        <ArrowRight width={12} height={12} />
+        <LinkOut size="xs" />
     </AnchorLink>
 </section>
