feat(footer): add brand component

--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,7 +1,8 @@
 ---
+import { Github, Linkedin, Instagram } from "../icons";
 import Brand from "./Brand.astro";
 ---
 
-<footer>
+<footer class="flex flex-col items-center justify-center py-12">
     <Brand />
 </footer>
