fix(cover): fix link out import

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -1,8 +1,7 @@
 ---
 import Image from "astro/components/Image.astro";
 import AnchorLink from "../library/AnchorLink.astro";
-import { ArrowRight } from "../icons";
-import LinkOut from "../icons/icons/LinkOut.astro";
+import { LinkOut } from "../icons";
 ---
 
 <section class="flex flex-col items-center justify-center my-36">
