feat(cover): add avatar

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -6,7 +6,7 @@ import { LinkOut } from "../icons";
 
 <section class="flex flex-col items-center justify-center my-36">
     <Image
-     src="https://lh3.googleusercontent.com/a/ACg8ocJiwi1owISmkdBb2uTRP7FdsqzujxX3Daj3mUVJ1gFDyw-AO_fH=s288-c-no"
+     src="/jenner.jpg"
      alt="Jenner Acosta Díaz"
      width={150}
      height={150}
