feat(footer): add nav socials component

--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,10 +1,11 @@
 ---
 import TextGradient from "../elements/TextGradient.astro";
-import { Github, Linkedin, Instagram } from "../icons";
 import Brand from "./Brand.astro";
+import NavSocials from "./NavSocials.astro";
 ---
 
 <footer class="flex flex-col items-center justify-center py-12">
     <Brand />
     <p class="text-xs font-light my-4">Develop your <TextGradient>dreams</TextGradient>  with me</p>
+    <NavSocials />
 </footer>
