feat(config): relink import consts

--- a/src/components/navigation/Brand.astro
+++ b/src/components/navigation/Brand.astro
@@ -1,5 +1,5 @@
 ---
-import { SITE_TITLE, SITE_ICON } from "../../src/consts"
+import { SITE_TITLE, SITE_ICON } from "../../consts"
 import Image from "astro/components/Image.astro";
 
 const name = SITE_TITLE;
