--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
 import '@fontsource-variable/inter';
 import "../styles/global.css";
-import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../src/consts";
+import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../consts";
 import BaseHead from "../components/heads/BaseHead.astro";
 import Header from "../components/navigation/Header.astro";
 import Footer from "../components/navigation/Footer.astro";
