feat(footer): add data contact component

--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -2,10 +2,12 @@
 import TextGradient from "../elements/TextGradient.astro";
 import Brand from "./Brand.astro";
 import NavSocials from "./NavSocials.astro";
+import NavDataContact from "./NavDataContact.astro";
 ---
 
 <footer class="flex flex-col items-center justify-center py-12">
     <Brand />
     <p class="text-xs font-light my-4">Develop your <TextGradient>dreams</TextGradient>  with me</p>
     <NavSocials />
+    <NavDataContact />
 </footer>
