refactor(cover): add limits container

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -4,7 +4,7 @@ import AnchorLink from "../library/AnchorLink.astro";
 import { LinkOut } from "../icons";
 ---
 
-<section class="flex flex-col items-center justify-center my-36">
+<section class="w-11/12 max-w-2xl mx-auto flex flex-col items-center justify-center my-36">
     <Image
      src="/jenner.jpg"
      alt="Jenner Acosta Díaz"
@@ -14,7 +14,7 @@ import { LinkOut } from "../icons";
      loading="eager"
     />
     <p class="text-small font-light my-4">Hi, I'm Jenner 👋</p>
-    <h1 class="text-4xl font-light max-w-2xl text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text">Software Developer passionate about crafting innovative solutions and delightful user experiences</h1>
+    <h1 class="text-4xl font-light text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text">Software Developer passionate about crafting innovative solutions and delightful user experiences</h1>
     <AnchorLink href="/projects" class="mt-10 flex items-center gap-2">
         Latest Projects
         <LinkOut size="xs" />
