fix(cover): change url proyect by portfolio

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -15,7 +15,7 @@ import { LinkOut } from "../icons";
     />
     <p class="text-small font-light my-4">Hi, I'm Jenner 👋</p>
     <h1 class="text-4xl font-light text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text">Software Developer passionate about crafting innovative solutions and delightful user experiences</h1>
-    <AnchorLink href="/projects" class="mt-10 flex items-center gap-2">
+    <AnchorLink href="/portfolio" class="mt-10 flex items-center gap-2">
         Latest Projects
         <LinkOut size="xs" />
     </AnchorLink>
