--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -5,8 +5,8 @@ const allPosts = Object.values(import.meta.glob('./portfolio/*.md', { eager: tru
 ---
 
 <Layout>
-    <h1>Portfolio</h1>
-    <ul>
-        {allPosts.map((post: any) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
-    </ul>
+    <main class="w-11/12 max-w-2xl mx-auto my-8 min-h-[calc(100vh-28rem)]">
+        <h1 class="w-full text-4xl font-light text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text">Portfolio</h1>
+        <p class="text-center text-sm text-neutral-500">A collection of my projects and work</p>
+    </main>
 </Layout>
