--- a/src/components/portfolio/Grid.astro
+++ b/src/components/portfolio/Grid.astro
@@ -1,6 +1,8 @@
 ---
+import Card from "./Card.astro";
+
 const allPosts = Object.values(import.meta.glob('../../pages/portfolio/*.md', { eager: true }));
 ---
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-    {allPosts.map((post: any) => <article><a href={post.url}>{post.frontmatter.title}</a></article>)}
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 lg:gap-8 my-8">
+    {allPosts.map((post: any) => <Card post={post} />)}
 </div>
