refactor(header): update width container

--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -4,8 +4,10 @@ import Navigation from "./Navigation.astro";
 ---
 
 <header>
-	<nav class="flex items-center justify-center md:justify-between py-6 md:py-8 max-w-6xl mx-auto">
+	<nav
+		class="w-11/12 max-w-6xl mx-auto flex items-center justify-center md:justify-between py-6 md:py-8"
+	>
 		<Brand />
-        <Navigation />
+		<Navigation />
 	</nav>
 </header>
