--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,4 +13,30 @@
     --color-primary-800: #252cae;
     --color-primary-900: #262e89;
     --color-primary-950: #161950;
+
+    --animate-slide-in: slide-in 0.3s ease-out;
+    --animate-fade-in: fade-in 0.3s ease-out;
+}
+
+@keyframes slide-in {
+    0% {
+        transform: translateY(1rem);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
