--- a/src/components/portfolio/Grid.astro
+++ b/src/components/portfolio/Grid.astro
@@ -1,5 +1,5 @@
 ---
-import Card from "./Card.astro";
+import Card from "./Card";
 
 const allPosts = Object.values(
     import.meta.glob("../../pages/portfolio/*.md", { eager: true }),
@@ -9,5 +9,5 @@ const allPosts = Object.values(
 <div
     class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 lg:gap-8 my-16"
 >
-    {allPosts.map((post: any) => <Card post={post} />)}
+    {allPosts.map((post: any) => <Card post={post} client:load />)}
 </div>
