chore(workflow): update with linter setting

--- a/src/components/elements/TextGradient.astro
+++ b/src/components/elements/TextGradient.astro
@@ -1,12 +1,7 @@
 ---
-const {
-    class: className = "from-primary-200 to-primary-500",
-} = Astro.props;
+const { class: className = 'from-primary-200 to-primary-500' } = Astro.props;
 
-const classList = [
-    "bg-gradient-to-r text-transparent bg-clip-text",
-    className,
-]
+const classList = ['bg-gradient-to-r text-transparent bg-clip-text', className];
 ---
 
 <span class:list={classList}>
