--- a/src/components/icons/Icons/Github.astro
+++ b/src/components/icons/Icons/Github.astro
@@ -1,8 +1,8 @@
 ---
-import type { Props as IconProps } from "../Icon.astro";
-import Icon from "../Icon.astro";
+import type { Props as IconProps } from '../Icon.astro';
+import Icon from '../Icon.astro';
 
-type Props = Omit<IconProps, "name">;
+type Props = Omit<IconProps, 'name'>;
 
 const props = Astro.props;
 ---
