--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -1,9 +1,9 @@
 ---
-import NavLink from "./NavLink.astro";
+import NavLink from './NavLink.astro';
 ---
 
 <nav class="hidden md:flex items-center gap-4">
-    <NavLink href="/">Home</a>
-    <NavLink href="/blog">Blog</a>
-    <NavLink href="/portfolio">Portfolio</a>
+    <NavLink href="/">Home</NavLink>
+    <NavLink href="/blog">Blog</NavLink>
+    <NavLink href="/portfolio">Portfolio</NavLink>
 </nav>
