--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -2,12 +2,13 @@
 import Layout from '../layouts/Layout.astro';
 import TextGradient from '../components/elements/TextGradient.astro';
 import Grid from '../components/portfolio/Grid.astro';
-
 ---
 
 <Layout title="Portfolio">
     <main class="w-11/12 max-w-6xl mx-auto my-8 min-h-[calc(100vh-28rem)]">
-        <h1 class="w-full text-4xl font-light text-center"><TextGradient class:list="to-neutral-600 from-neutral-300">Portfolio</TextGradient></h1>
+        <h1 class="w-full text-4xl font-light text-center">
+            <TextGradient class:list="to-neutral-600 from-neutral-300">Portfolio</TextGradient>
+        </h1>
         <p class="text-center text-sm text-neutral-500">A collection of my projects and work</p>
         <Grid />
     </main>
