--- a/src/components/icons/Icon.astro
+++ b/src/components/icons/Icon.astro
@@ -1,53 +1,43 @@
 ---
 export interface Props {
-  name: string;
-  size?: number | string;
-  class?: string;
-  strokeWidth?: number;
+    name: string;
+    size?: number | string;
+    class?: string;
+    strokeWidth?: number;
 }
 
-const {
-  name,
-  size = 24,
-  strokeWidth = 0,
-  class: className = "",
-  ...rest
-} = Astro.props;
+const { name, size = 24, strokeWidth = 0, class: className = '', ...rest } = Astro.props;
 
 const sizeStyle = {
-  md: "size-6",
-  sm: "size-4",
-  xs: "size-3",
+    md: 'size-6',
+    sm: 'size-4',
+    xs: 'size-3',
 };
 
-const classList = [
-  "fill-neutral-300",
-  sizeStyle[size as keyof typeof sizeStyle],
-  className,
-];
+const classList = ['fill-neutral-300', sizeStyle[size as keyof typeof sizeStyle], className];
 ---
 
 <svg
-  xmlns="http://www.w3.org/2000/svg"
-  width={24}
-  height={24}
-  viewBox={`0 0 24 24`}
-  fill="none"
-  stroke="currentColor"
-  stroke-width={strokeWidth}
-  stroke-linecap="round"
-  stroke-linejoin="round"
-  aria-label={name}
-  class:list={classList}
-  {...rest}
+    xmlns="http://www.w3.org/2000/svg"
+    width={24}
+    height={24}
+    viewBox={`0 0 24 24`}
+    fill="none"
+    stroke="currentColor"
+    stroke-width={strokeWidth}
+    stroke-linecap="round"
+    stroke-linejoin="round"
+    aria-label={name}
+    class:list={classList}
+    {...rest}
 >
-  <title>{name}</title>
-  <slot />
+    <title>{name}</title>
+    <slot />
 </svg>
 
 <style>
-  .icon {
-    flex-shrink: 0;
-    transition: all 0.2s ease;
-  }
+    .icon {
+        flex-shrink: 0;
+        transition: all 0.2s ease;
+    }
 </style>
