--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -1,13 +1,13 @@
 ---
-import Brand from "./Brand.astro";
-import Navigation from "./Navigation.astro";
+import Brand from './Brand.astro';
+import Navigation from './Navigation.astro';
 ---
 
 <header>
-	<nav
-		class="w-11/12 max-w-6xl mx-auto flex items-center justify-center md:justify-between py-6 md:py-8"
-	>
-		<Brand />
-		<Navigation />
-	</nav>
+    <nav
+        class="w-11/12 max-w-6xl mx-auto flex items-center justify-center md:justify-between py-6 md:py-8"
+    >
+        <Brand />
+        <Navigation />
+    </nav>
 </header>
