--- a/src/components/navigation/NavDataContact.astro
+++ b/src/components/navigation/NavDataContact.astro
@@ -1,9 +1,11 @@
 ---
-import { SITE_DATA_CONTACT } from "../../consts";
-import AnchorLink from "../library/AnchorLink.astro";
+import { SITE_DATA_CONTACT } from '../../consts';
+import AnchorLink from '../library/AnchorLink.astro';
 ---
 
-<div class="flex flex-col md:flex-row gap-4 mt-4 items-center justify-center w-full max-w-lg mx-auto">
+<div
+    class="flex flex-col md:flex-row gap-4 mt-4 items-center justify-center w-full max-w-lg mx-auto"
+>
     <p class="flex-1 text-sm font-light text-center">
         <AnchorLink href={`mailto:${SITE_DATA_CONTACT.email}`} variant="outline" class="block px-0">
             {SITE_DATA_CONTACT.email}
@@ -15,7 +17,11 @@ import AnchorLink from "../library/AnchorLink.astro";
         </AnchorLink>
     </p>
     <p class="flex-1 text-sm font-light text-center">
-        <AnchorLink href={`https://wa.me/${SITE_DATA_CONTACT.walink}`} variant="outline" class="block px-0">
+        <AnchorLink
+            href={`https://wa.me/${SITE_DATA_CONTACT.walink}`}
+            variant="outline"
+            class="block px-0"
+        >
             {SITE_DATA_CONTACT.address}
         </AnchorLink>
     </p>
