--- a/src/components/navigation/NavSocials.astro
+++ b/src/components/navigation/NavSocials.astro
@@ -1,34 +1,35 @@
 ---
-import { Github, Linkedin, Instagram, Youtube } from "../icons";
-import { SITE_SOCIAL } from "../../consts";
+import { Github, Linkedin, Instagram, Youtube } from '../icons';
+import { SITE_SOCIAL } from '../../consts';
 
 const socials = [
     {
-        name: "Github",
+        name: 'Github',
         url: SITE_SOCIAL.github,
         icon: Github,
     },
-]
+];
 
 const socialIcons = {
     github: Github,
     linkedin: Linkedin,
     instagram: Instagram,
     youtube: Youtube,
-}
+};
 
 const socialLinks = Object.entries(SITE_SOCIAL).map(([key, value]) => ({
     name: key,
     url: value,
     icon: socialIcons[key as keyof typeof socialIcons],
-}))
-
+}));
 ---
 
 <div class="flex items-center gap-4">
-    {socialLinks.map(({ name, url, icon: Icon }) => (
-        <a href={url} title={name} target="_blank" rel="noopener noreferrer">
-            <Icon />
-        </a>
-    ))}
+    {
+        socialLinks.map(({ name, url, icon: Icon }) => (
+            <a href={url} title={name} target="_blank" rel="noopener noreferrer">
+                <Icon />
+            </a>
+        ))
+    }
 </div>
