--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,11 @@
 ---
 import '@fontsource-variable/inter';
-import "../styles/global.css";
-import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from "../consts";
-import BaseHead from "../components/heads/BaseHead.astro";
-import Header from "../components/navigation/Header.astro";
-import Footer from "../components/navigation/Footer.astro";
-const {title, description, image} = Astro.props;
+import '../styles/global.css';
+import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from '../consts';
+import BaseHead from '../components/heads/BaseHead.astro';
+import Header from '../components/navigation/Header.astro';
+import Footer from '../components/navigation/Footer.astro';
+const { title, description, image } = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const pageDescription = description || SITE_DESCRIPTION;
@@ -14,12 +14,12 @@ const ogImage = image || SITE_IMAGE;
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
-	</head>
-	<body class="bg-neutral-900 text-neutral-300">
-		<Header />
-		<slot />
-		<Footer />
-	</body>
+    <head>
+        <BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
+    </head>
+    <body class="bg-neutral-900 text-neutral-300">
+        <Header />
+        <slot />
+        <Footer />
+    </body>
 </html>
