--- a/src/layouts/MarkdownPortfolioLayout.astro
+++ b/src/layouts/MarkdownPortfolioLayout.astro
@@ -1,8 +1,9 @@
 ---
-import Layout from "./Layout.astro";
+import Layout from './Layout.astro';
 
 const { frontmatter } = Astro.props;
 ---
+
 <Layout>
     <main class="w-11/12 max-w-2xl mx-auto my-36">
         <h1>{frontmatter.title}</h1>
