--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @theme {
     --font-sans: 'Inter Variable', 'sans-serif';
@@ -28,7 +28,6 @@
         transform: translateY(0);
         opacity: 1;
     }
-
 }
 
 @keyframes fade-in {
