feat(portfolio): add post component

--- a/src/components/portfolio/Grid.astro
+++ b/src/components/portfolio/Grid.astro
@@ -1,9 +1,9 @@
 ---
-import Card from './Card';
+import Post from './Post.astro';
 
 const allPosts = Object.values(import.meta.glob('../../pages/portfolio/*.md', { eager: true }));
 ---
 
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 lg:gap-8 my-16">
-    {allPosts.map((post: any) => <Card post={post} client:load />)}
+    {allPosts.map((post: any) => <Post post={post} />)}
 </div>
