--- a/src/layouts/MarkdownPortfolioLayout.astro
+++ b/src/layouts/MarkdownPortfolioLayout.astro
@@ -1,19 +1,99 @@
 ---
 import Layout from './Layout.astro';
+import TextGradient from '../components/elements/TextGradient.astro';
+import { CldImage } from 'astro-cloudinary';
+import { Github } from '../components/icons';
+import Image from 'astro/components/Image.astro';
 
 const { frontmatter } = Astro.props;
 ---
 
 <Layout>
-    <main class="w-11/12 max-w-2xl mx-auto my-36">
-        <h1>{frontmatter.title}</h1>
-        <p><em>{frontmatter.description}</em></p>
-        <p>{frontmatter.slug}</p>
-        <p>{frontmatter.date}</p>
-        <p>{frontmatter.duration}</p>
-        <p>{frontmatter.type}</p>
-        <p>{frontmatter.tags}</p>
-        <p>{frontmatter.tech}</p>
-        <slot />
+    <main class="w-11/12 max-w-6xl mx-auto my-36 text-gray-400 flex flex-col gap-12">
+        <div class="grid lg:grid-cols-5 items-center gap-8">
+            <div class="col-span-2 flex flex-col gap-4">
+                <div class="flex flex-col">
+                    <h1 class="text-5xl font-bold">
+                        <TextGradient class="from-gray-400 to-gray-500">{frontmatter.title}</TextGradient>
+                    </h1>
+                </div>
+                <p class="font-light text-sm">{frontmatter.description}</p>
+                <div
+                    class="flex flex-wrap gap-2 max-w-10/12">
+                    {
+                        frontmatter.tech.map((tech: string) => (
+                            <a href={`/portfolio?tech=${tech}`}
+                               class="text-gray-400/90 font-light text-xs before:content-['<'] after:content-['/>'] cursor-pointer">{tech} </a>
+                        ))
+                    }
+                </div>
+            </div>
+            <div class="col-span-3 flex">
+                <CldImage
+                    src={frontmatter.imageCover}
+                    alt={frontmatter.title}
+                    width={1200}
+                    height={685}
+                    class="rounded-2xl shadow-2xl shadow-gray-700/50"
+                />
+            </div>
+        </div>
+        <aside
+            class="flex justify-between items-center gap-4 p-4 font-light text-xs bg-neutral-800 rounded-lg shadow-md outline-4 outline-neutral-400/15 hover:shadow-2xl hover:shadow-neutral-800 transition-shadow duration-500">
+            <nav class="flex gap-4 items-center">
+                <span
+                    class="bg-gradient-to-r from-primary-700 to-primary-500 text-neutral-300 text-xs font-light px-2 py-1 rounded-md">
+                    {frontmatter.category}
+                </span>
+                <p>{frontmatter.date} / {frontmatter.duration}</p>
+            </nav>
+            <nav class="flex-1 flex justify-center gap-2">
+                <a href="#overview">Overview</a>|<a href="#gallery">Gallery</a>
+            </nav>
+            <nav class="flex gap-2 items-center">
+                <p>External Links:</p>
+                <a href={frontmatter.demoLink} target="_blank">{frontmatter.demoLink}</a>
+                <a href={frontmatter.gitHub} target="_blank" class="bg-gray-900">
+                    <Github size="sm" class="fill-gray-400" />
+                </a>
+                <a href={frontmatter.deepWiki} target="_blank">
+                    <Image
+                        src="https://deepwiki.com/icon.png"
+                        alt="Deep Wiki Info"
+                        width={16}
+                        height={16}
+                        loading="eager"
+                    />
+                </a>
+            </nav>
+        </aside>
+        <main
+            id="overview"
+            class="
+                max-w-2xl m-auto
+                [&>h2]:font-light [&>h2]:text-3xl [&>h2]:mb-4 [&>h2]:mt-12
+                [&>p]:font-light [&>p]:mb-2
+                [&>table]:my-4 [&>table]:text-sm
+                [&>table>thead]:border-b [&>table>thead]:text-left
+                [&>table>tbody>tr]:border-b [&>table>tbody>tr>td]:py-4 [&>table>tbody>tr>td]:px-2
+                [&>ul]:list-disc [&>ul]:pl-6 [&>ul]:my-4 [&>ul]:font-light [&>ul>li]:py-1
+                [&>ol]:list-decimal [&>ol]:pl-6 [&>ol]:my-4 [&>ol]:font-light [&>ol>li]:py-1
+            "
+        >
+            <slot />
+        </main>
+        <section id="gallery" class="grid gap-4 pt-4">
+            {
+                frontmatter.images.map((image: string, index: number) => (
+                    <CldImage
+                        src={image}
+                        alt={`${frontmatter.title} image ${index + 1}`}
+                        width={1152}
+                        height={648}
+                        class="rounded-xl"
+                    />
+                ))
+            }
+        </section>
     </main>
 </Layout>
