--- a/src/layouts/MarkdownPortfolioLayout.astro
+++ b/src/layouts/MarkdownPortfolioLayout.astro
@@ -9,12 +9,12 @@ const { frontmatter } = Astro.props;
 ---
 
 <Layout>
-    <main class="w-11/12 max-w-6xl mx-auto my-36 text-gray-400 flex flex-col gap-12">
+    <main class="w-11/12 max-w-6xl mx-auto my-36 text-neutral-300/80 flex flex-col gap-12">
         <div class="grid lg:grid-cols-5 items-center gap-8">
             <div class="col-span-2 flex flex-col gap-4">
                 <div class="flex flex-col">
                     <h1 class="text-5xl font-bold">
-                        <TextGradient class="from-gray-400 to-gray-500">{frontmatter.title}</TextGradient>
+                        <TextGradient class="from-neutral-300/80 to-neutral-500/70">{frontmatter.title}</TextGradient>
                     </h1>
                 </div>
                 <p class="font-light text-sm">{frontmatter.description}</p>
@@ -23,7 +23,7 @@ const { frontmatter } = Astro.props;
                     {
                         frontmatter.tech.map((tech: string) => (
                             <a href={`/portfolio?tech=${tech}`}
-                               class="text-gray-400/90 font-light text-xs before:content-['<'] after:content-['/>'] cursor-pointer">{tech} </a>
+                               class="text-neutral-400/90 font-light text-xs before:content-['<'] after:content-['/>'] cursor-pointer">{tech} </a>
                         ))
                     }
                 </div>
@@ -34,7 +34,7 @@ const { frontmatter } = Astro.props;
                     alt={frontmatter.title}
                     width={1200}
                     height={685}
-                    class="rounded-2xl shadow-2xl shadow-gray-700/50"
+                    class="rounded-2xl shadow-2xl shadow-neutral-700/50"
                 />
             </div>
         </div>
@@ -53,8 +53,8 @@ const { frontmatter } = Astro.props;
             <nav class="flex gap-2 items-center">
                 <p>External Links:</p>
                 <a href={frontmatter.demoLink} target="_blank">{frontmatter.demoLink}</a>
-                <a href={frontmatter.gitHub} target="_blank" class="bg-gray-900">
-                    <Github size="sm" class="fill-gray-400" />
+                <a href={frontmatter.gitHub} target="_blank" class="bg-neutral-900">
+                    <Github size="sm" class="fill-neutral-400" />
                 </a>
                 <a href={frontmatter.deepWiki} target="_blank">
                     <Image
