--- a/src/components/blog/Grid.astro
+++ b/src/components/blog/Grid.astro
@@ -4,5 +4,5 @@ const allBlogs = Object.values(import.meta.glob('../../pages/blog/*.md', { eager
 ---
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 lg:gap-8 my-16">
     {allBlogs.map((blog: any) =>
-        <Card blog={blog} />)}
+        <Card blog={blog} class="lg:col-span-3" />)}
 </div>
