chore(system): remove icons vault

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -1,7 +1,7 @@
 ---
 import Image from 'astro/components/Image.astro';
 import AnchorLink from '../library/AnchorLink.astro';
-import { LinkOut } from '../icons';
+import LinkOut from '../icons/Icons/LinkOut.astro';
 ---
 
 <section class="w-11/12 max-w-2xl mx-auto flex flex-col items-center justify-center my-36">
