--- a/src/components/icons/Icon.astro
+++ b/src/components/icons/Icon.astro
@@ -1,6 +1,7 @@
 ---
+import * as React from 'react';
 export interface Props {
-    name: string;
+    name?: string;
     size?: number | string;
     class?: string;
     strokeWidth?: number;
