--- a/src/components/navigation/NavSocials.astro
+++ b/src/components/navigation/NavSocials.astro
@@ -1,6 +1,11 @@
 ---
-import { Github, Linkedin, Instagram, Youtube } from '../icons';
+import Github from '../icons/Icons/Github.astro';
+import Linkedin from '../icons/Icons/Linkedin.astro';
+import Instagram from '../icons/Icons/Instagram.astro';
+import Youtube from '../icons/Icons/Youtube.astro';
+
 import { SITE_SOCIAL } from '../../consts';
+import Icon from '../icons/Icon.astro';
 
 const socials = [
     {
