--- a/src/layouts/MarkdownPortfolioLayout.astro
+++ b/src/layouts/MarkdownPortfolioLayout.astro
@@ -2,7 +2,7 @@
 import Layout from './Layout.astro';
 import TextGradient from '../components/elements/TextGradient.astro';
 import { CldImage } from 'astro-cloudinary';
-import { Github } from '../components/icons';
+import Github from '../components/icons/Icons/Github.astro';
 import Image from 'astro/components/Image.astro';
 import Markdown from '../components/library/Markdown.astro';
 
