--- a/src/layouts/MarkdownBlogLayout.astro
+++ b/src/layouts/MarkdownBlogLayout.astro
@@ -50,7 +50,9 @@ const date = new Date(frontmatter.date).toLocaleDateString('en-US', {
                     </div>
 
                     <div class="flex">
-                        <ButtonCopyLink class="flex items-center gap-1 border px-2 py-1 hover:bg-neutral-800">
+                        <ButtonCopyLink
+                            class="flex items-center gap-1 border px-2 py-1 hover:bg-neutral-800"
+                        >
                             <Copy size="xs" />
                             <span class="text-xs">Copy Link</span>
                         </ButtonCopyLink>
