--- a/src/layouts/MarkdownBlogLayout.astro
+++ b/src/layouts/MarkdownBlogLayout.astro
@@ -13,9 +13,11 @@ const date = new Date(frontmatter.date).toLocaleDateString('en-US', {
     month: 'short',
     year: 'numeric',
 });
+
+const ogImageUrl = `https://res.cloudinary.com/${import.meta.env.PUBLIC_CLOUDINARY_CLOUD_NAME}/image/upload/c_fill,w_1200,h_630/${frontmatter.imageCover}.jpg`;
 ---
 
-<Layout>
+<Layout title={frontmatter.title} description={frontmatter.description} image={ogImageUrl}>
     <section class="w-11/12 max-w-4xl mx-auto my-12 text-neutral-300/80 flex flex-col gap-12">
         <div class="flex flex-col gap-6">
             <h1 class="text-4xl lg:text-5xl font-semibold">
