--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,8 @@ import { SITE_DESCRIPTION, SITE_IMAGE, SITE_TITLE } from '../consts';
 import BaseHead from '../components/heads/BaseHead.astro';
 import Header from '../components/navigation/Header.astro';
 import Footer from '../components/navigation/Footer.astro';
+import Analytics from '@vercel/analytics/astro';
+
 const { title, description, image } = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
@@ -14,12 +16,13 @@ const ogImage = image || SITE_IMAGE;
 
 <!doctype html>
 <html lang="en">
-    <head>
-        <BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
-    </head>
-    <body class="bg-neutral-900 text-neutral-300">
-        <Header />
-        <slot />
-        <Footer />
-    </body>
+<head>
+    <BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
+</head>
+<body class="bg-neutral-900 text-neutral-300">
+<Header />
+<slot />
+<Footer />
+<Analytics />
+</body>
 </html>
