--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import BaseHead from '../components/heads/BaseHead.astro';
 import Header from '../components/navigation/Header.astro';
 import Footer from '../components/navigation/Footer.astro';
 import Analytics from '@vercel/analytics/astro';
+import SpeedInsights from '@vercel/speed-insights/astro';
 
 const { title, description, image } = Astro.props;
 
@@ -24,5 +25,6 @@ const ogImage = image || SITE_IMAGE;
 <slot />
 <Footer />
 <Analytics />
+<SpeedInsights />
 </body>
 </html>
