--- a/src/components/navigation/Brand.astro
+++ b/src/components/navigation/Brand.astro
@@ -4,6 +4,8 @@ import Image from 'astro/components/Image.astro';
 
 const name = SITE_TITLE;
 const icon = SITE_ICON;
+
+const { loading } = Astro.props;
 ---
 
 <a href="/" class="flex items-center gap-2">
@@ -13,7 +15,7 @@ const icon = SITE_ICON;
         width={24}
         height={24}
         decoding="async"
-        loading="eager"
+        loading={loading}
         class="w-6 h-6"
     />
     <h1 class="text-2xl font-bold">{name}</h1>
