--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -7,7 +7,7 @@ import Navigation from './Navigation.astro';
     <nav
         class="w-11/12 max-w-6xl mx-auto flex items-center justify-center md:justify-between py-6 md:py-8"
     >
-        <Brand />
+        <Brand loading="eager" />
         <Navigation />
     </nav>
 </header>
